--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Paseico</string>
+    <string name="title_activity_route_search">RouteSearch</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="search_fragment_label">First Fragment</string>
+    <string name="route_list_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
