--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,19 @@
     <string name="estimated_time">Duración estimada:</string>
     <string name="number_of_POI">Número de puntos de interés:</string>
     <string name="minimum_of_points">Mínimo de puntos:</string>
+    <string name="km">km</string>
+    <string name="hours">h</string>
 
     <string name="default_spinner_choice">Indiferente</string>
 
+    <string name="lt0.5">&lt; 0,5</string>
+    <string name="between0.5_1">1-2</string>
+    <string name="lt1">&lt; 1</string> <!-- &lt; is '<' -->
+    <string name="between1_2">1-2</string>
+    <string name="between2_3">2-3</string>
+    <string name="between3_4">3-4</string>
+    <string name="between4_5">4-5</string>
+    <string name="gt5">&gt; 5</string> <!-- &gt; is '>' -->
     <!--Strings arrays used to populate searchFragment spinners -->
     <string-array name="themes_of_route">
         <item>@string/default_spinner_choice</item>
@@ -31,25 +41,24 @@
     </string-array>
     <string-array name="lengths_of_route">
         <item>@string/default_spinner_choice</item>
-        <item>&gt; 1 km</item> <!-- &gt; is '<' -->
-        <item>1-2 km</item>
-        <item>2-3 km</item>
-        <item>3-4 km</item>
-        <item>4-5 km</item>
-        <item>&lt; 5km</item> <!-- &lt; is '>' -->
+        <item>@string/lt1</item>
+        <item>@string/between1_2</item>
+        <item>@string/between2_3</item>
+        <item>@string/between3_4</item>
+        <item>@string/between4_5</item>
+        <item>@string/gt5</item>
     </string-array>
     <string-array name="estimated_times_of_route">
         <item>@string/default_spinner_choice</item>
-        <item>&gt; 30 min</item> <!-- &gt; is '<' -->
-        <item>30-60 min</item>
-        <item>1-2 h</item>
-        <item>2-3 h</item>
-        <item>3-4 h</item>
-        <item>4-5 h</item>
-        <item>&lt; 5 h</item> <!-- &lt; is '>' -->
+        <item>@string/lt0.5</item>
+        <item>@string/between0.5_1</item>
+        <item>@string/between1_2</item>
+        <item>@string/between2_3</item>
+        <item>@string/between3_4</item>
+        <item>@string/between4_5</item>
+        <item>@string/gt5</item>
+        <item></item>
     </string-array>
-
-
 
 
     <string name="search_fragment_title">Seleccione el filtro de búsqueda</string>
