corregido un recurso de string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <!-- Strings used for textviews names-->
     <string name="key_word">Palabras clave:</string>
     <string name="theme">Temática:</string>
-    <string name ="lenght">Longitud:</string>
+    <string name ="length">Longitud:</string>
     <string name="estimated_time">Duración estimada:</string>
     <string name="number_of_POI">Número de puntos de interés:</string>
     <string name="minimum_of_points">Mínimo de puntos:</string>
@@ -21,6 +21,8 @@
     <string name="hours">h</string>
 
     <string name="default_spinner_choice">Indiferente</string>
+
+
 
     <string name="lt0.5">&lt; 0,5</string>
     <string name="between0.5_1">1-2</string>
@@ -31,6 +33,9 @@
     <string name="between4_5">4-5</string>
     <string name="gt5">&gt; 5</string> <!-- &gt; is '>' -->
     <!--Strings arrays used to populate searchFragment spinners -->
+    <string-array name="filter_options">
+        <item></item>
+    </string-array>
     <string-array name="themes_of_route">
         <item>@string/default_spinner_choice</item>
         <item>Museos</item>
@@ -57,7 +62,6 @@
         <item>@string/between3_4</item>
         <item>@string/between4_5</item>
         <item>@string/gt5</item>
-        <item></item>
     </string-array>
 
 
