--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAMLXmyf_ai85V6PdlA7jYhjL-nSgHl7mA</string>
 
     <!-- Strings used for route search fragments for navigation -->
-    <string name="search_fragment_label">First Fragment</string>
-    <string name="route_list_fragment_label">Second Fragment</string>
+    <string name="menu_route_search_fragment_label">SearchFragment</string>
+    <string name="route_search_result_fragment_label">RouteSearchResult</string>
 
     <!-- Strings used for buttons names-->
     <string name="search">Buscar</string>
@@ -85,7 +85,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_profile">Perfil</string>
-    <string name="menu_routes">Rutas</string>
+    <string name="menu_user_created_routes">Rutas</string>
     <string name="menu_searcher">Buscar rutas</string>
     <string name="menu_marketplace">Tienda</string>
 
