Primer Commit del marketplace
Ya tenemos una primera version inicial del marketplace en la cual ya funciona la compra de puntos (a falta de perfeccionar algunos detalles), faltarian las imagenes reales del mock up y la compra del boost, ademas de los  posibles descuentos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,5 +88,7 @@
     <string name="menu_routes">Rutas</string>
     <string name="menu_searcher">Buscar rutas</string>
     <string name="menu_marketplace">Tienda</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
