--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <!-- Strings used for buttons names-->
     <string name="search">Buscar</string>
     <string name="previous">Volver</string>
-
+    <string name="discounts">DESCUENTOS</string>
 
     <string name="zero">0</string>
     <string name="route_name_hint">Nombre de la ruta</string>
@@ -90,5 +90,6 @@
     <string name="menu_marketplace">Tienda</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
