Añadido el dialog intermedio que muestra el coste total de la ruta en creación

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,12 +41,12 @@
 
 
     <string name="lt0.5">&lt; 0,5</string>
-    <string name="between0.5_1">0.5-1</string>
+    <string name="between0.5_1">0.5–1</string>
     <string name="lt1">&lt; 1</string> <!-- &lt; is '<' -->
-    <string name="between1_2">1-2</string>
-    <string name="between2_3">2-3</string>
-    <string name="between3_4">3-4</string>
-    <string name="between4_5">4-5</string>
+    <string name="between1_2">1–2</string>
+    <string name="between2_3">2–3</string>
+    <string name="between3_4">3–4</string>
+    <string name="between4_5">4–5</string>
     <string name="gt5">&gt; 5</string> <!-- &gt; is '>' -->
 
     <!-- Strings arrays used to populate searchFragment spinners -->
@@ -100,5 +100,10 @@
     <!-- Messages displayed to the user  -->
     <string name="route_creation_finalize_title">"Finalizar creación de ruta"</string>
     <string name="route_creation_confirmation_message">"La nueva ruta ha sido guardada satisfactoriamente."</string>
-    <string name="route_creation_not_enough_points_message">"No tienes los puntos suficientes para crear la ruta."</string>
+    <string name="route_creation_not_enough_points_message">"No tienes los puntos suficientes para crear la ruta."
+    </string>
+
+    <!-- The %1$d represents a String format argument.
+    (See: https://stackoverflow.com/questions/3656371/is-it-possible-dynamically-to-add-string-to-string-xml-in-android -->
+    <string name="route_creation_summary_message">"El coste de la ruta en creación es de: %1$d"</string>
 </resources>
