--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,5 @@
 
     <!-- The %1$d represents a String format argument.
     (See: https://stackoverflow.com/questions/3656371/is-it-possible-dynamically-to-add-string-to-string-xml-in-android -->
-    <string name="route_creation_summary_message">"El coste de la ruta en creación es de: %1$d"</string>
+    <string name="route_creation_summary_message">"El coste de la ruta en creación es de: %1$d puntos"</string>
 </resources>
