--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="search">Buscar</string>
     <string name="previous">Volver</string>
     <string name="start_route">Empezar ruta</string>
+    <string name="create_new_point_of_interest_button">Crear nuevo Punto de Interés</string>
 
     <string name="discounts">DESCUENTOS</string>
 
@@ -97,7 +98,7 @@
     <string name="menu_searcher">Buscar rutas</string>
     <string name="menu_marketplace">Tienda</string>
 
-    <!-- Messages displayed to the user  -->
+    <!-- Messages displayed to the user. -->
     <string name="route_creation_finalize_title">"Finalizar creación de ruta"</string>
     <string name="route_creation_confirmation_message">"La nueva ruta ha sido guardada satisfactoriamente."</string>
     <string name="route_creation_not_enough_points_message">"No tienes los puntos suficientes para crear la ruta."
@@ -106,4 +107,7 @@
     <!-- The %1$d represents a String format argument.
     (See: https://stackoverflow.com/questions/3656371/is-it-possible-dynamically-to-add-string-to-string-xml-in-android -->
     <string name="route_creation_summary_message">"El coste de la ruta en creación es de: %1$d puntos"</string>
+
+    <!-- TextInput related. -->
+    <string name="new_point_of_interest_name_text_input_hint">Nombre del nuevo Punto de Interés</string>
 </resources>
