--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,8 @@
 
     <!-- Strings used for textviews names-->
     <string name="key_word">Palabras clave:</string>
-    <string name="theme">Temática:</string>
+    <string name="category">Temática:</string>
+    <string name="category_without_colon">Temática</string>
     <string name="length">Longitud:</string>
     <string name="estimated_time">Duración estimada:</string>
     <string name="number_of_POI">Número de puntos de interés:</string>
@@ -49,7 +50,7 @@
     <!-- Strings arrays used to populate searchFragment spinners -->
     <string name="search_fragment_title">Seleccione el filtro de búsqueda</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string-array name="themes_of_route">
+    <string-array name="route_category">
         <item>@string/default_spinner_choice</item>
         <item>@string/no_theme_choice</item>
         <item>Museos</item>
