--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,10 +115,10 @@
     <string name="route_creation_summary_message">"El coste de la ruta en creación es de: %1$d puntos"</string>
 
     <!-- TextInput related. -->
-    <string name="new_point_of_interest_name_text_input_hint">Nombre del nuevo Punto de Interés</string>
+    <string name="new_point_of_interest_name_text_input_hint">Nombre del nuevo punto de interés</string>
     <string name="rutero">Rutero</string>
     <string name="organizaci_n">Organización</string>
-    <string name="nombre_de_la_organizaci_n">Nombre de la organización</string>
+    <string name="nombre_de_la_organizaci_n">Nombre organización</string>
     <string name="contrase_a">Contraseña</string>
     <string name="repita_la_contrase_a">Repita la contraseña</string>
 </resources>
