--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="hours">h</string>
     <string name="reward_points">Puntos:</string>
     <string name="ordered_route">Ruta ordenada:</string>
+    <string name="list_of_POI">Puntos de interés:</string>
 
     <string name="default_spinner_choice">Indiferente</string>
     <string name="no_theme_choice">Sin temática</string>
