Seguidores y Seguidos en español y interfaces

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,7 +127,7 @@
     <string name="percentage">Porcentaje</string>
     <string name="create_coupon">Crear</string>
     <string name="cancel_coupon">Cancelar</string>
-    <string name="title_new_coupon">CREAR NUEVO CUPÓN</string>
+    <string name="title_new_coupon">Crear nuevo cupón</string>
     <string name="log_out_organization">Cerrar sesión</string>
 
     <string name="route_creation_empty_name">Por favor, introduce un nombre válido</string>
