--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Paseico</string>
+    <string name="app_name_UpperCase">PASEICO</string>
 
     <string name="title_activity_routing">Map</string>
     <string name="title_activity_route_navigator">Map</string>
