Cambios en diseño

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,7 +121,7 @@
     <string name="nif">NIF</string>
     <string name="email">Correo electrónico</string>
     <string name="register">Registrarse</string>
-    <string name="create_new_coupon">Crear Nuevo cupón</string>
+    <string name="create_new_coupon">Crear nuevo cupón</string>
     <string name="delete_coupon">Borrar cupón</string>
     <string name="your_coupon">Tus cupones</string>
     <string name="discount_name">Nombre del descuento</string>
